Project

General

Profile

Actions

Bug #58928

closed

osd crash during reboot

Added by Xuehan Xu about 1 year ago. Updated 11 months ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

#0  0x00002aaaaeb8ba4f in raise () from /lib64/libc.so.6
#1  0x00002aaaaeb5edb5 in abort () from /lib64/libc.so.6
#2  0x00002aaaaeb5ec89 in __assert_fail_base.cold.0 () from /lib64/libc.so.6
#3  0x00002aaaaeb843a6 in __assert_fail () from /lib64/libc.so.6
#4  0x000000000116c423 in crimson::interruptible::interrupt_cond_t<crimson::osd::IOInterruptCondition>::set (this=0x2aaaaab013a0, ic=...) at ../src/crimson/common/interruptible_future.h:97
#5  crimson::interruptible::interrupt_cond_t<crimson::osd::IOInterruptCondition>::set (this=0x2aaaaab013a0, ic=...) at ../src/crimson/common/interruptible_future.h:97
#6  0x00000000012e49c7 in crimson::interruptible::internal::call_with_interruption_impl<crimson::osd::IOInterruptCondition, crimson::osd::PeeringEvent<crimson::osd::LocalPeeringEvent>::with_pg(crimson::osd::ShardServices&, boost::intrusive_ptr<crimson::osd::PG>)::{lambda()#1}>(seastar::lw_shared_ptr<crimson::osd::IOInterruptCondition>, crimson::osd::PeeringEvent<crimson::osd::LocalPeeringEvent>::with_pg(crimson::osd::ShardServices&, boost::intrusive_ptr<crimson::osd::PG>)::{lambda()#1}&&) (interrupt_condition=..., func=...)
    at ../src/crimson/common/interruptible_future.h:198
#7  0x00000000012e4c3e in crimson::interruptible::interruptor<crimson::osd::IOInterruptCondition>::with_interruption_cond<crimson::osd::PeeringEvent<crimson::osd::LocalPeeringEvent>::with_pg(crimson::osd::ShardServices&, boost::intrusive_ptr<crimson::osd::PG>)::{lambda()#1}, crimson::osd::PeeringEvent<crimson::osd::LocalPeeringEvent>::with_pg(crimson::osd::ShardServices&, boost::intrusive_ptr<crimson::osd::PG>)::{lambda(std::__exception_ptr::exception_ptr)#2}>(crimson::osd::PeeringEvent<crimson::osd::LocalPeeringEvent>::with_pg(crimson::osd::ShardServices&, boost::intrusive_ptr<crimson::osd::PG>)::{lambda()#1}&&, crimson::osd::PeeringEvent<crimson::osd::LocalPeeringEvent>::with_pg(crimson::osd::ShardServices&, boost::intrusive_ptr<crimson::osd::PG>)::{lambda(std::__exception_ptr::exception_ptr)#2}&&, crimson::osd::IOInterruptCondition&&) (opfunc=..., efunc=..., cond=...) at ../src/seastar/include/seastar/core/shared_ptr.hh:267
#8  0x00000000012e509d in crimson::interruptible::interruptor<crimson::osd::IOInterruptCondition>::with_interruption<crimson::osd::PeeringEvent<crimson::osd::LocalPeeringEvent>::with_pg(crimson::osd::ShardServices&, boost::intrusive_ptr<crimson::osd::PG>)::{lambda()#1}, crimson::osd::PeeringEvent<crimson::osd::LocalPeeringEvent>::with_pg(crimson::osd::ShardServices&, boost::intrusive_ptr<crimson::osd::PG>)::{lambda(std::__exception_ptr::exception_ptr)#2}, boost::intrusive_ptr<crimson::osd::PG>&>(crimson::osd::PeeringEvent<crimson::osd::LocalPeeringEvent>::with_pg(crimson::osd::ShardServices&, boost::intrusive_ptr<crimson::osd::PG>)::{lambda()#1}&&, crimson::osd::PeeringEvent<crimson::osd::LocalPeeringEvent>::with_pg(crimson::osd::ShardServices&, boost::intrusive_ptr<crimson::osd::PG>)::{lambda(std::__exception_ptr::exception_ptr)#2}&&, boost::intrusive_ptr<crimson::osd::PG>&) (efunc=..., opfunc=...) at ../src/crimson/common/interruptible_future.h:1127
#9  crimson::osd::PeeringEvent<crimson::osd::LocalPeeringEvent>::with_pg (this=this@entry=0x300029197700, shard_services=..., pg=...) at ../src/crimson/osd/osd_operations/peering_event.cc:103
#10 0x00000000012d0ba0 in operator() (__closure=<optimized out>) at ../src/crimson/osd/pg.h:601
#11 seastar::futurize<seastar::future<void> >::invoke<crimson::osd::LocalPeeringEvent::start()::<lambda()> > (func=...) at ../src/seastar/include/seastar/core/future.hh:2147
#12 seastar::futurize<seastar::future<void> >::invoke<crimson::osd::LocalPeeringEvent::start()::<lambda()> > (func=...) at ../src/seastar/include/seastar/core/future.hh:1991
#13 seastar::future<void>::then_impl<crimson::osd::LocalPeeringEvent::start()::<lambda()> > (func=..., this=<optimized out>) at ../src/seastar/include/seastar/core/future.hh:1613
#14 seastar::internal::call_then_impl<seastar::future<void> >::run<crimson::osd::LocalPeeringEvent::start()::<lambda()> > (func=..., fut=...) at ../src/seastar/include/seastar/core/future.hh:1246
#15 seastar::future<void>::then<crimson::osd::LocalPeeringEvent::start()::<lambda()> > (func=..., this=<optimized out>) at ../src/seastar/include/seastar/core/future.hh:1532
#16 crimson::osd::LocalPeeringEvent::start (this=this@entry=0x300029197700) at ../src/crimson/osd/osd_operations/peering_event.cc:177
#17 0x00000000011a30b7 in crimson::osd::PerShardState::start_operation<crimson::osd::LocalPeeringEvent, crimson::osd::PG*, pg_shard_t&, spg_t&, unsigned int const&, unsigned int const&, PeeringState::IntervalFlush> (this=0x300000193918)
    at ../src/crimson/osd/shard_services.h:135
#18 0x000000000115a1f3 in crimson::osd::ShardServices::start_operation<crimson::osd::LocalPeeringEvent, crimson::osd::PG*, pg_shard_t&, spg_t&, unsigned int const&, unsigned int const&, PeeringState::IntervalFlush> (this=<optimized out>)
    at ../src/crimson/osd/shard_services.h:370
#19 operator() (__closure=0x30002985fa70) at ../src/crimson/osd/pg.cc:179
#20 seastar::futurize<std::pair<boost::intrusive_ptr<crimson::osd::LocalPeeringEvent>, seastar::future<void> > >::invoke<crimson::osd::PG::try_flush_or_schedule_async()::<lambda()> > (func=...) at ../src/seastar/include/seastar/core/future.hh:2149
#21 seastar::futurize<std::pair<boost::intrusive_ptr<crimson::osd::LocalPeeringEvent>, seastar::future<void> > >::invoke<crimson::osd::PG::try_flush_or_schedule_async()::<lambda()> > (func=...) at ../src/seastar/include/seastar/core/future.hh:1991
#22 seastar::future<void>::then_impl<crimson::osd::PG::try_flush_or_schedule_async()::<lambda()> > (func=..., this=0x30002985fa60) at ../src/seastar/include/seastar/core/future.hh:1613
#23 seastar::internal::call_then_impl<seastar::future<void> >::run<crimson::osd::PG::try_flush_or_schedule_async()::<lambda()> > (func=..., fut=...) at ../src/seastar/include/seastar/core/future.hh:1246
#24 seastar::future<void>::then<crimson::osd::PG::try_flush_or_schedule_async()::<lambda()> > (func=..., this=0x30002985fa60) at ../src/seastar/include/seastar/core/future.hh:1532
#25 crimson::osd::PG::try_flush_or_schedule_async (this=<optimized out>) at ../src/crimson/osd/pg.cc:169
#26 0x0000000001424a22 in PeeringState::set_last_peering_reset (this=0x300e8edf0498) at ../src/osd/PeeringState.cc:488
#27 0x0000000001424d6d in PeeringState::Reset::Reset (this=0x30001b81a910, ctx=...) at ../src/osd/PeeringState.cc:4663
#28 0x0000000001459876 in boost::statechart::state<PeeringState::Reset, PeeringState::PeeringMachine, boost::mpl::list<mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na>, (boost::statechart::history_mode)0>::shallow_construct (pContext=<optimized out>, pContext=<optimized out>,
    outermostContextBase=...) at /opt/rh/gcc-toolset-11/root/usr/include/c++/11/bits/allocator.h:174
#29 boost::statechart::state<PeeringState::Reset, PeeringState::PeeringMachine, boost::mpl::list<mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na>, (boost::statechart::history_mode)0>::deep_construct (outermostContextBase=..., pContext=<optimized out>, pContext=<optimized out>)
    at boost/include/boost/statechart/state.hpp:78
#30 0x000000000149c8e0 in boost::statechart::detail::inner_constructor<boost::mpl::l_item<mpl_::long_<1l>, PeeringState::Reset, boost::mpl::l_end>, boost::statechart::state_machine<PeeringState::PeeringMachine, PeeringState::Initial, std::allocator<boost::statechart::none>, boost::statechart::null_exception_translator> >::construct (outermostContextBase=..., pContext=<synthetic pointer>: 0x300e8edf1b90) at boost/include/boost/statechart/detail/constructor.hpp:89
#31 boost::statechart::simple_state<PeeringState::Initial, PeeringState::PeeringMachine, boost::mpl::list<mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na>, (boost::statechart::history_mode)0>::transit_impl<PeeringState::Reset, PeeringState::PeeringMachine, boost::statechart::detail::no_transition_function> (transitionAction=..., this=0x30001b81a910) at boost/include/boost/statechart/simple_state.hpp:799
#32 boost::statechart::simple_state<PeeringState::Initial, PeeringState::PeeringMachine, boost::mpl::list<mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na>, (boost::statechart::history_mode)0>::transit<PeeringState::Reset> (this=0x30001b81a910)
    at boost/include/boost/statechart/simple_state.hpp:314
#33 boost::statechart::transition<PeeringState::Initialize, PeeringState::Reset, boost::statechart::detail::no_context<PeeringState::Initialize>, &boost::statechart::detail::no_context<PeeringState::Initialize>::no_function>::reactions<PeeringState::Initial>::react_without_action (stt=...) at boost/include/boost/statechart/transition.hpp:38
#34 boost::statechart::detail::reaction_dispatcher<boost::statechart::transition<PeeringState::Initialize, PeeringState::Reset, boost::statechart::detail::no_context<PeeringState::Initialize>, &boost::statechart::detail::no_context<PeeringState::Initialize>::no_function>::reactions<PeeringState::Initial>, PeeringState::Initial, boost::statechart::event_base, PeeringState::Initialize, boost::statechart::detail::no_context<PeeringState::Initialize>, void const*>::without_action::react (stt=...)
    at boost/include/boost/statechart/detail/reaction_dispatcher.hpp:47
#35 boost::statechart::detail::reaction_dispatcher<boost::statechart::transition<PeeringState::Initialize, PeeringState::Reset, boost::statechart::detail::no_context<PeeringState::Initialize>, &boost::statechart::detail::no_context<PeeringState::Initialize>::no_function>::reactions<PeeringState::Initial>, PeeringState::Initial, boost::statechart::event_base, PeeringState::Initialize, boost::statechart::detail::no_context<PeeringState::Initialize>, void const*>::derived::react (eventType=<optimized out>, evt=..., stt=...)
    at boost/include/boost/statechart/detail/reaction_dispatcher.hpp:92
#36 boost::statechart::detail::reaction_dispatcher<boost::statechart::transition<PeeringState::Initialize, PeeringState::Reset, boost::statechart::detail::no_context<PeeringState::Initialize>, &boost::statechart::detail::no_context<PeeringState::Initialize>::no_function>::reactions<PeeringState::Initial>, PeeringState::Initial, boost::statechart::event_base, PeeringState::Initialize, boost::statechart::detail::no_context<PeeringState::Initialize>, void const*>::react (
    eventType=<synthetic pointer>: 0x35a1470 <boost::statechart::detail::id_holder<PeeringState::Initialize>::idProvider_>, evt=..., eventType=<synthetic pointer>: 0x35a1470 <boost::statechart::detail::id_holder<PeeringState::Initialize>::idProvider_>, stt=...)
    at boost/include/boost/statechart/detail/reaction_dispatcher.hpp:108
#37 boost::statechart::transition<PeeringState::Initialize, PeeringState::Reset, boost::statechart::detail::no_context<PeeringState::Initialize>, &boost::statechart::detail::no_context<PeeringState::Initialize>::no_function>::react<PeeringState::Initial, boost::statechart::event_base, void const*> (eventType=<synthetic pointer>: 0x35a1470 <boost::statechart::detail::id_holder<PeeringState::Initialize>::idProvider_>, evt=..., stt=...) at boost/include/boost/statechart/transition.hpp:59
#38 boost::statechart::simple_state<PeeringState::Initial, PeeringState::PeeringMachine, boost::mpl::list<mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na>, (boost::statechart::history_mode)0>::local_react_impl_non_empty::local_react_impl<boost::mpl::list<boost::statechart::transition<PeeringState::Initialize, PeeringState::Reset, boost::statechart::detail::no_context<PeeringState::Initialize>, &boost::statechart::detail::no_context<PeeringState::Initialize>::no_function>, boost::statechart::custom_reaction<NullEvt>, boost::statechart::transition<boost::statechart::event_base, PeeringState::Crashed, boost::statechart::detail::no_context<boost::statechart::event_base>, &boost::statechart::detail::no_context<boost::statechart::event_base>::no_function>, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na--Type <RET> for more, q to quit, c to continue without paging--
, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na>, boost::statechart::simple_state<PeeringState::Initial, PeeringState::PeeringMachine, boost::mpl::list<mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na>, (boost::statechart::history_mode)0> > (eventType=0x35a1470 <boost::statechart::detail::id_holder<PeeringState::Initialize>::idProvider_>, evt=..., stt=...)
    at boost/include/boost/statechart/simple_state.hpp:814
#39 boost::statechart::simple_state<PeeringState::Initial, PeeringState::PeeringMachine, boost::mpl::list<mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na>, (boost::statechart::history_mode)0>::local_react<boost::mpl::list<boost::statechart::transition<PeeringState::Initialize, PeeringState::Reset, boost::statechart::detail::no_context<PeeringState::Initialize>, &boost::statechart::detail::no_context<PeeringState::Initialize>::no_function>, boost::statechart::custom_reaction<NullEvt>, boost::statechart::transition<boost::statechart::event_base, PeeringState::Crashed, boost::statechart::detail::no_context<boost::statechart::event_base>, &boost::statechart::detail::no_context<boost::statechart::event_base>::no_function>, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na> > (
    eventType=0x35a1470 <boost::statechart::detail::id_holder<PeeringState::Initialize>::idProvider_>, evt=..., this=0x30001b81a910) at boost/include/boost/statechart/simple_state.hpp:850
#40 boost::statechart::simple_state<PeeringState::Initial, PeeringState::PeeringMachine, boost::mpl::list<mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na>, (boost::statechart::history_mode)0>::react_impl (this=0x30001b81a910, evt=...,
    eventType=0x35a1470 <boost::statechart::detail::id_holder<PeeringState::Initialize>::idProvider_>) at boost/include/boost/statechart/simple_state.hpp:489
#41 0x0000000001177186 in boost::statechart::detail::send_function<boost::statechart::detail::state_base<std::allocator<boost::statechart::none>, boost::statechart::detail::rtti_policy>, boost::statechart::event_base, void const*>::operator() (this=<synthetic pointer>)
    at boost/include/boost/statechart/state_machine.hpp:87
#42 boost::statechart::null_exception_translator::operator()<boost::statechart::detail::send_function<boost::statechart::detail::state_base<std::allocator<boost::statechart::none>, boost::statechart::detail::rtti_policy>, boost::statechart::event_base, void const*>, boost::statechart::state_machine<PeeringState::PeeringMachine, PeeringState::Initial, std::allocator<boost::statechart::none>, boost::statechart::null_exception_translator>::exception_event_handler> (action=..., this=0x300e8edf1c00)
    at boost/include/boost/statechart/null_exception_translator.hpp:33
#43 boost::statechart::state_machine<PeeringState::PeeringMachine, PeeringState::Initial, std::allocator<boost::statechart::none>, boost::statechart::null_exception_translator>::send_event (evt=..., this=0x300e8edf1b90)
    at boost/include/boost/statechart/state_machine.hpp:885
#44 boost::statechart::state_machine<PeeringState::PeeringMachine, PeeringState::Initial, std::allocator<boost::statechart::none>, boost::statechart::null_exception_translator>::process_event (evt=..., this=0x300e8edf1b90)
    at boost/include/boost/statechart/state_machine.hpp:275
#45 PeeringState::handle_event (this=0x300e8edf0498, evt=..., rctx=<optimized out>) at ../src/osd/PeeringState.h:1738
#46 0x0000000001131df2 in operator() (__closure=0x300e8ccb2cd0) at ../src/crimson/osd/pg.cc:654
#47 std::__invoke_impl<void, crimson::osd::PG::do_peering_event(PGPeeringEvent&, PeeringCtx&)::<lambda()> > (__f=...) at /opt/rh/gcc-toolset-11/root/usr/include/c++/11/bits/invoke.h:61
#48 std::__invoke<crimson::osd::PG::do_peering_event(PGPeeringEvent&, PeeringCtx&)::<lambda()> > (__fn=...) at /opt/rh/gcc-toolset-11/root/usr/include/c++/11/bits/invoke.h:96
#49 std::invoke<crimson::osd::PG::do_peering_event(PGPeeringEvent&, PeeringCtx&)::<lambda()> > (__fn=...) at /opt/rh/gcc-toolset-11/root/usr/include/c++/11/functional:97
#50 crimson::interruptible::non_futurized_call_with_interruption<crimson::osd::IOInterruptCondition, crimson::osd::PG::do_peering_event(PGPeeringEvent&, PeeringCtx&)::<lambda()> > (func=..., interrupt_condition=...) at ../src/crimson/common/interruptible_future.h:296
#51 operator() (__closure=0x300e8ccb2cd0) at ../src/crimson/common/interruptible_future.h:1405
#52 std::__invoke_impl<void, crimson::interruptible::interruptor<crimson::osd::IOInterruptCondition>::async<crimson::osd::PG::do_peering_event(PGPeeringEvent&, PeeringCtx&)::<lambda()> >(crimson::osd::PG::do_peering_event(PGPeeringEvent&, PeeringCtx&)::<lambda()>&&)::<lambda()> > (__f=...) at /opt/rh/gcc-toolset-11/root/usr/include/c++/11/bits/invoke.h:61
#53 std::__invoke<crimson::interruptible::interruptor<crimson::osd::IOInterruptCondition>::async<crimson::osd::PG::do_peering_event(PGPeeringEvent&, PeeringCtx&)::<lambda()> >(crimson::osd::PG::do_peering_event(PGPeeringEvent&, PeeringCtx&)::<lambda()>&&)::<lambda()> >
    (__fn=...) at /opt/rh/gcc-toolset-11/root/usr/include/c++/11/bits/invoke.h:96
#54 std::__apply_impl<crimson::interruptible::interruptor<crimson::osd::IOInterruptCondition>::async<crimson::osd::PG::do_peering_event(PGPeeringEvent&, PeeringCtx&)::<lambda()> >(crimson::osd::PG::do_peering_event(PGPeeringEvent&, PeeringCtx&)::<lambda()>&&)::<lambda()>, std::tuple<> > (__t=..., __f=...) at /opt/rh/gcc-toolset-11/root/usr/include/c++/11/tuple:1858
#55 std::apply<crimson::interruptible::interruptor<crimson::osd::IOInterruptCondition>::async<crimson::osd::PG::do_peering_event(PGPeeringEvent&, PeeringCtx&)::<lambda()> >(crimson::osd::PG::do_peering_event(PGPeeringEvent&, PeeringCtx&)::<lambda()>&&)::<lambda()>, std::tuple<> > (__t=..., __f=...) at /opt/rh/gcc-toolset-11/root/usr/include/c++/11/tuple:1869
#56 seastar::futurize<void>::apply<crimson::interruptible::interruptor<crimson::osd::IOInterruptCondition>::async<crimson::osd::PG::do_peering_event(PGPeeringEvent&, PeeringCtx&)::<lambda()> >(crimson::osd::PG::do_peering_event(PGPeeringEvent&, PeeringCtx&)::<lambda()>&&)::<lambda()> > (args=..., func=...) at ../src/seastar/include/seastar/core/future.hh:2111
#57 operator() (__closure=0x300011f476a0) at ../src/seastar/include/seastar/core/thread.hh:258
#58 seastar::noncopyable_function<void()>::direct_vtable_for<seastar::async<crimson::interruptible::interruptor<crimson::osd::IOInterruptCondition>::async<crimson::osd::PG::do_peering_event(PGPeeringEvent&, PeeringCtx&)::<lambda()> >(crimson::osd::PG::do_peering_event(PGPeeringEvent&, PeeringCtx&)::<lambda()>&&)::<lambda()> >(seastar::thread_attributes, crimson::interruptible::interruptor<crimson::osd::IOInterruptCondition>::async<crimson::osd::PG::do_peering_event(PGPeeringEvent&, PeeringCtx&)::<lambda()> >(crimson::osd::PG::do_peering_event(PGPeeringEvent&, PeeringCtx&)::<lambda()>&&)::<lambda()>&&)::<lambda()> >::call(const seastar::noncopyable_function<void()> *) (func=0x300011f476a0) at ../src/seastar/include/seastar/util/noncopyable_function.hh:124
#59 0x000000000102b6ab in seastar::noncopyable_function<void ()>::operator()() const (this=0x300011f476a0) at ../src/seastar/include/seastar/util/noncopyable_function.hh:210
#60 seastar::thread_context::main (this=0x300011f47680) at ../src/seastar/src/core/thread.cc:299
Actions #1

Updated by Kefu Chai about 1 year ago

  • Status changed from New to Fix Under Review
  • Pull request ID set to 50411
Actions #2

Updated by Matan Breizman 11 months ago

  • Status changed from Fix Under Review to Resolved
Actions

Also available in: Atom PDF